Fix a display bug in the book list when a title or author is too long

--- a/src/assets/scss/elements/list/_books.scss
+++ b/src/assets/scss/elements/list/_books.scss
@@ -3,6 +3,8 @@
 
     .list-element {
         border-bottom: 1px solid $listBorderColor;
+        display: flex;
+        flex-direction: row;
         padding: 0 !important;
         height: 70px;
 
@@ -14,21 +16,30 @@
             background: $listSelectedBg !important;
         }
 
+        &, & > * {
+            white-space: nowrap;
+            overflow: hidden;
+        }
+
         .list-element-color {
-            float: left;
+            display: flex;
+            flex: 0 0 auto;
             height: 100%;
             margin-right: 7px;
             width: 5px;
         }
 
         .content-wrapper {
-            float: left;
+            display: flex;
+            flex: 1 1 auto;
+            flex-direction: row;
             height: 100%;
             padding: 10px 5px;
 
             .list-element-bookcover {
                 background-size: cover;
-                float: left;
+                display: flex;
+                flex: 0 0 auto;
                 height: 100%;
                 margin-right: 12px;
                 width: 50px;
@@ -39,13 +50,24 @@
                 }
             }
 
-            .list-element-name {
-                font-weight: bold;
-                margin-bottom: 5px;
-            }
+            .list-element-book-info {
+                display: flex;
+                flex: 1 1 auto;
+                flex-direction: column;
 
-            .list-element-author {
-                font-size: .8em;
+                div {
+                    display: flex;
+                    flex: 0 0 auto;
+                }
+
+                .list-element-name {
+                    font-weight: bold;
+                    margin-bottom: 5px;
+                }
+
+                .list-element-author {
+                    font-size: .8em;
+                }
             }
         }
     }
